@startuml modelo_logico_relacional
skinparam backgroundColor #FFFFFE
skinparam class {
    BackgroundColor #E1F5E1
    BorderColor #4CAF50
    ArrowColor #4CAF50
}
skinparam note {
    BackgroundColor #E8F5E8
    BorderColor #66BB6A
}

title Modelo Lógico Relacional - Sistema de Gestión de Barberías

' === TABLAS PRINCIPALES ===

class clientes {
    <<table>>
    +id_cliente: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    direccion
    fecha_nacimiento
    preferencias
    puntos_fidelidad
    fecha_primera_visita
    estado
    fecha_registro
    ultimo_acceso
}

class administradores {
    <<table>>
    +id_administrador: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    nivel_acceso
    permisos_especiales
    estado
    fecha_registro
    ultimo_acceso
}

class barberias {
    <<table>>
    +id_barberia: PK
    --
    id_administrador: FK
    nombre
    direccion
    telefono
    email
    horario_apertura
    horario_cierre
    latitud
    longitud
    estado
    fecha_registro
}

class barberos {
    <<table>>
    +id_barbero: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    id_barberia: FK
    especialidades
    experiencia_años
    calificacion_promedio
    estado
    fecha_ingreso
    fecha_registro
    ultimo_acceso
}

class servicios {
    <<table>>
    +id_servicio: PK
    --
    id_barberia: FK
    nombre
    descripcion
    duracion_minutos
    precio
    categoria
    estado
}

class barbero_servicios {
    <<table>>
    +id_asignacion: PK
    --
    id_barbero: FK
    id_servicio: FK
    activo
}

class reservas {
    <<table>>
    +id_reserva: PK
    --
    id_cliente: FK
    id_barbero_servicio: FK
    fecha_hora
    duracion_estimada
    precio_acordado
    estado
    notas_cliente
    notas_barbero
    fecha_creacion
    fecha_confirmacion
    fecha_completada
}

class calificaciones {
    <<table>>
    +id_calificacion: PK
    --
    id_reserva: FK NN
    puntuacion_servicio
    puntuacion_barbero
    comentario
    fecha_calificacion
}

class promociones {
    <<table>>
    +id_promocion: PK
    --
    id_barberia: FK
    nombre
    descripcion
    descuento_porcentaje
    descuento_monto
    fecha_inicio
    fecha_fin
    max_usos
    usos_actuales
    estado
}

' === RELACIONES REFERENCIALES ===
administradores ||--o{ barberias : "administra"

barberias ||--o{ barberos : "emplea"
barberias ||--o{ servicios : "ofrece"
barberias ||--o{ promociones : "publica"

barberos ||--o{ barbero_servicios : "puede_realizar"
servicios ||--o{ barbero_servicios : "es_realizado_por"

clientes ||--o{ reservas : "solicita"
barbero_servicios ||--o{ reservas : "asigna_servicio"

reservas ||--o| calificaciones : "genera_calificacion"


@enduml